fix scroll on safari

--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,8 @@ img {
 
 .noScroll {
     overflow: hidden;
+    touch-action: none;
+    -ms-touch-action: none;
 }
 
 .button {
